--- a/labtask 2/styles.css
+++ b/labtask 2/styles.css
@@ -1,29 +1,21 @@
-*{
-    /* background-color: black; */
+html, body {
+    height: 100%;
 }
+
 body {
-    font-family: 'Inter', sans-serif;
-    background-image: url('resources/manuel-will-gd3t5Dtbwkw-unsplash.jpg') !important;
+    font-family: "PT Sans", 'Inter', sans-serif;
+    background-image: url('resources/Darkmanuel-will-gd3t5Dtbwkw-unsplash 2.png');
     background-size: cover;
     background-repeat: no-repeat;
     color: white;
-    font-family: "PT Sans";
 }
-.hero {
-    width: 100%;
+
+.leftside {
     height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* background-color: #1C1C1C; Background color */
-    border: #ddd 1px;
 }
-.leftside{
-    background: #F8F8F8;
-}
-.formtypography{
+
+.formtypography {
     color: #FFF !important;
-    /* text-align: center; */
     font-family: "PT Sans";
     font-size: 15px;
     font-style: normal;
@@ -31,9 +23,9 @@ body {
     line-height: normal;
     letter-spacing: 2.4px;
 }
-#storyForm div input{
+
+#storyForm div input {
     color: #FFF !important;
-    /* text-align: center; */
     font-family: "PT Sans";
     font-size: 15px;
     font-style: normal;
@@ -41,7 +33,8 @@ body {
     line-height: normal;
     letter-spacing: 2.4px;
 }
-.title-heading{
+
+.title-heading {
     color: rgba(255, 255, 255, 0.90) !important;
     font-family: "PT Sans";
     font-size: 98px;
@@ -49,8 +42,10 @@ body {
     font-weight: 700;
     line-height: normal;
     letter-spacing: 6.86px;
+    text-align: start;
 }
-.title-subheading{
+
+.title-subheading {
     color: rgba(255, 255, 255, 0.70) !important;
     text-align: center;
     font-family: "PT Sans";
@@ -60,11 +55,8 @@ body {
     line-height: normal;
     letter-spacing: 3.2px;
 }
-.title-subheadingalignment{
-    display: flex;
-    justify-content: flex-end;
-}
-.title-miniheading{
+
+.title-miniheading {
     color: rgba(255, 255, 255, 0.80) !important;
     font-family: "PT Sans";
     font-size: 14px;
@@ -73,10 +65,12 @@ body {
     line-height: normal;
     letter-spacing: 3.22px;
 }
-.title-miniheadingalignment{
+
+.title-miniheadingalignment {
     margin-top: 141px;
 }
-.briefintro{
+
+.briefintro {
     color: rgba(255, 255, 255, 0.70) !important;
     font-family: "PT Sans";
     font-size: 14px;
@@ -86,11 +80,10 @@ body {
     letter-spacing: 2.24px;
     display: flex;
 }
+
 .container {
-    /* background-color: white; */
     padding: 20px;
     border-radius: 8px;
-    /* box-shadow: 0 4px 8px rgba(0,0,0,0.1); */
 }
 
 h1 {
@@ -116,7 +109,69 @@ h1 {
     margin-bottom: 10px;
 }
 
-.edit-story, .delete-story {
-    margin-right: 10px;
+.form-text-field {
+    background-color: black !important;
+    color: white !important;
 }
 
+.form-text-field::placeholder {
+    color: white !important;
+}
+
+.add-button {
+    background-color: black !important; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
+.heading-text {
+    color: #0D0D0D;
+    font-family: "PT Sans";
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: 3.2px;
+}
+
+.bottom-heading {
+    color: #000;
+    font-family: "PT Sans";
+    font-size: 98px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 128.571%;
+    letter-spacing: 0.98px;
+}
+
+.hero-section {
+    background-color: white;
+    color: black;
+}
+
+.overflow {
+    overflow: auto;
+}
+
+.rightside {
+    overflow-y: auto;
+    height: 100vh;
+}
+
+.custom-button {
+    background-color: rgb(230, 230, 230) !important;
+    color: black !important;
+    border: 1px solid black;
+}
+
+@media screen and (max-width: 768px) {
+    .leftside, .rightside {
+        background-image: none;
+    }
+
+    .rightside {
+        background-image: url('resources/Darkmanuel-will-gd3t5Dtbwkw-unsplash\ 2.png');
+    }
+}
