Final lab commit

--- a/final lab/views/index.ejs
+++ b/final lab/views/index.ejs
@@ -132,6 +132,17 @@
     </div>
 </div>
 
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <div class="stats-padding">
+                <p class="stats-typography stats-typography-largetext">Introduction</p>
+                <p class="stats-typography stats-typography-minitext">Experience an extraordinary culinary journey at BlackOut Grill, Riyadh's premier destination for high-class dining. Our restaurant offers a sophisticated atmosphere where you can indulge in gourmet burgers and succulent steaks crafted to perfection.</p>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="container-fluid container-fluid-logos">
     <div class="d-flex justify-content-around align-items-center">
         <img src="/Images/logoLeft.png" alt="AutoCAD-logo">
